--- a/index.html
+++ b/index.html
@@ -14,22 +14,34 @@
 </head>
 
 <body>
+  <div class="row">
+    <div class="col-sm-4"></div>
+    <div class="col-sm-4">
+      <h1>Stock Stalker</h1>
 
-  <h1>Stock Stalker</h1>
+      <!-- To be changed by JS. -->
+      <h2 id="tickerSymbol"></h2>
+      <h3 id="stockPrice"></h3>
 
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Quisque egestas diam in arcu cursus euismod. Dignissim convallis aenean et tortor at risus viverra
-    adipiscing. Neque ornare aenean euismod elementum nisi. Etiam erat velit scelerisque in dictum non consectetur a
-    erat. Nunc sed augue lacus viverra vitae congue eu consequat ac. Vitae congue eu consequat ac felis donec et odio
-    pellentesque. Tincidunt praesent semper feugiat nibh sed. Consequat semper viverra nam libero justo laoreet sit amet
-    cursus. Vitae ultricies leo integer malesuada nunc. Sollicitudin tempor id eu nisl nunc mi ipsum. Cursus turpis
-    massa tincidunt dui. Nulla malesuada pellentesque elit eget gravida cum sociis.
-  </p>
 
-  <button type="button" class="btn btn-primary" onclick="runCode()">Click Me</button>
+      <form id="yourForm">
+        <div class="form-group">
+          <label></label>
+          <input type="search" class="form-control" id="formTickerSymbol" placeholder="Ex: AMZN" required>
+        </div>
+        <button type="button" class="btn btn-primary" is="myBtn" onclick="runCode()">Get Stonks</button>
+      </form>
+
+    </div>
+    <div class="col-sm-4"></div>
+  </div>
+
+
+
+
 
   <!-- Putting the external src in the body so the contents load before the js is good practice -->
+  <link rel="stylesheet" type="text/css" href="style.css">
   <script src="Script.js"></script>
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
