Added the date for current pulled stock price

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
   <div class="row">
     <div class="col-sm-4"></div>
     <div class="col-sm-4">
-      <h1>Stock Stalker</h1>
+      <h1><u>Stock Stalker</u></h1>
 
       <!-- To be changed by JS. -->
       <h2 id="tickerSymbol"></h2>
       <h3 id="stockPrice"></h3>
+      <p id="stockTime"></p>
+
 
 
       <form id="yourForm">
