--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
   <!-- Putting the external src in the body so the contents load before the js is good practice -->
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="Script.js"></script>
+  <script src="script.js"></script>
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
